Fixed spacing for boolean values.

--- a/frontend/src/styles/Modal.css
+++ b/frontend/src/styles/Modal.css
@@ -16,3 +16,7 @@
 .custom-close:hover::before {
     color: white;
 }
+
+.form-label {
+    margin-right: 1rem;
+}
